index.css
/* ------------------- */
/* Custom Properties   */
/* ------------------- */

:root {
  /* colors */
  --clr-dark: 230 35% 7%;
  --clr-light: 231 77% 90%;
  --clr-white: 0 0% 100%;

  /* font sizes */
  --fs-900: 9.375rem;
  --fs-800: 6.25rem;
  --fs-700: 3.5rem;
  --fs-600: 2rem;
  --fs-500: 1.75rem;
  --fs-400: 1.125rem;
  --fs-300: 1rem;
  --fs-200: 0.875rem;

  /* font-families */
  --ff-serif: "Bellefair", serif;
  --ff-sans-cond: "Barlow Condensed", sans-serif;
  --ff-sans-normal: "Barlow", sans-serif;
}

/* ------------------- */
/* Reset               */
/* ------------------- */

/* https://piccalil.li/blog/a-modern-css-reset/ */

/* Box sizing */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
    margin: 0;
}

/* set up the body */
body {
  font-family: var(--ff-sans-normal);
  font-size: var(--fs-400);
  color: hsl( var(--clr-white) );
  background-color: hsl( var(--clr-dark) );
  line-height: 1.5;
  min-height: 100vh;
}

/* make images easier to work with */
img,
picture {
    max-width: 100%;
    display: block;
}

/* make form elements easier to work with */
input,
button,
textarea,
select {
    font: inherit;
}

/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* ------------------- */
/* Utility Classes     */
/* ------------------- */

.flex {
  display: flex;
  justify-content: center;
  gap: var(--gap, 1rem)
}

.grid {
  display: grid;
  gap: var(--gap, 1rem)
}

/* this means everything that has an adjascent sibling before it, so the style will apply to everything except for the first element that class is applied to */
.flow > *:where(:not(:first-child)) {
  margin-top: var(--flow-space, 1rem);
}
/* Can set this variable where it is used in an inline style on a specific element */
/* <div class="flow" style="flex-basis: 100%; --flow-space: 4rem;"> */

.container {
  padding-inline: 2em;
  max-width: 80rem;
  margin-inline: auto;
}

.screen-reader-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}

.box {
  background: lightblue;
  padding: 3rem;
}

.cool-gap {
  --gap: 2em;
}

/* colors */
.bg-dark { background-color: hsl( var(--clr-dark) );}
.bg-light { background-color: hsl( var(--clr-light) );}
.bg-white { background-color: hsl( var(--clr-white) );}
.text-dark { color: hsl( var(--clr-dark) );}
.text-light { color: hsl( var(--clr-light) );}
.text-white { color: hsl( var(--clr-white) );}

/* typography */
h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}

.ff-serif { font-family: var(--ff-serif); } 
.ff-sans-cond { font-family: var(--ff-sans-cond); } 
.ff-sans-normal { font-family: var(--ff-sans-normal); } 

.letter-spacing-1 { letter-spacing: 4.75px; } 
.letter-spacing-2 { letter-spacing: 2.7px; } 
.letter-spacing-3 { letter-spacing: 2.35px; } 

.uppercase { text-transform: uppercase; }

.fs-900 { font-size: var(--fs-900); }
.fs-800 { font-size: var(--fs-800); }
.fs-700 { font-size: var(--fs-700); }
.fs-600 { font-size: var(--fs-600); }
.fs-500 { font-size: var(--fs-500); }
.fs-400 { font-size: var(--fs-400); }
.fs-300 { font-size: var(--fs-300); }
.fs-200 { font-size: var(--fs-200); }

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
    line-height: 1.1;
}

.numbered-title {
  display: flex;
  font-family: var(--ff-sans-cond);
  font-size: var(--fs-500);
  text-transform: uppercase;
  letter-spacing: 4.72px;
}

.numbered-title span {
  color: hsl( var(--clr-white) / .25);
  font-weight: 700;
  margin-right: .5em;
}

.example-component {
  background-color: hsl( var(--clr-light) / .2 )
}

/* ------------------- */
/* Components          */
/* ------------------- */

.large-button {
  position: relative;
  padding: 0 2em;
  display: grid;
  z-index: 1;
  place-items: center;
  text-decoration: none;
  aspect-ratio: 1;
  border-radius: 50%;
}

.large-button::after {
  content: '';
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: hsl( var(--clr-white) / .15);
  border-radius: 50%;
  opacity: 0;
  transition: opacity 500ms linear, transform 500ms ease-in-out;
}

.large-button:hover::after,
.large-button:hover::after {
  opacity: 1;
  transform: scale(1.5);
}

.primary-navigation {
  --gap: 8rem;
  --underline-gap: 2rem;
  list-style: none;
  padding: 0;
  margin: 0;
}

.primary-navigation a {
  text-decoration: none;
}

.primary-navigation a > span {
  font-weight: 700;
  margin-right: .5em;
}

.underline-indicators > * {
  padding: var(--underline-gap, 1rem) 0;
  border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
}

.underline-indicators > *:hover,
.underline-indicators > *:focus {
  border-color: hsl( var(--clr-white) / .5 );
}

.underline-indicators > .active {
  border-color: hsl( var(--clr-white) / 1);
}

